WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
162473
Removed unused hasErrorInfo().
https://bugs.webkit.org/show_bug.cgi?id=162473
Summary
Removed unused hasErrorInfo().
Mark Lam
Reported
2016-09-22 16:52:26 PDT
Patch coming.
Attachments
proposed patch.
(2.70 KB, patch)
2016-09-22 16:54 PDT
,
Mark Lam
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2016-09-22 16:54:45 PDT
Created
attachment 289632
[details]
proposed patch.
WebKit Commit Bot
Comment 2
2016-09-22 18:18:09 PDT
Comment on
attachment 289632
[details]
proposed patch. Clearing flags on attachment: 289632 Committed
r206284
: <
http://trac.webkit.org/changeset/206284
>
WebKit Commit Bot
Comment 3
2016-09-22 18:18:12 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug