Removed unused hasErrorInfo(). https://bugs.webkit.org/show_bug.cgi?id=162473

Reviewed by Saam Barati.

* JavaScriptCore.order:
* runtime/Error.cpp:
(JSC::hasErrorInfo): Deleted.
* runtime/Error.h:


Canonical link: https://commits.webkit.org/180424@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206284 268f45cc-cd09-0410-ab3c-d52691b4dbfc