Source/JavaScriptCore/runtime/Error.h
@@ -64,7 +64,6 @@ JS_EXPORT_PRIVATE JSObject* createOutOfMemoryError(ExecState*);
 
 bool addErrorInfoAndGetBytecodeOffset(ExecState*, VM&, JSObject*, bool, CallFrame*&, unsigned* = nullptr);
 
-bool hasErrorInfo(ExecState*, JSObject* error);
 JS_EXPORT_PRIVATE void addErrorInfo(ExecState*, JSObject*, bool); 
 JSObject* addErrorInfo(ExecState*, JSObject* error, int line, const SourceCode&);
 
